--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>DublinBus</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cambay">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Candal">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM+Serif+Text">
@@ -17,23 +17,22 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Niramit">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orienta">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quattrocento">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css?h=cd4ad23711e72dc5e4abcff1977a7ce1">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="assets/css/Map-Clean.css">
+    <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-    <!-- Start: Map Clean -->
     <div class="map-clean"></div>
-    <!-- End: Map Clean -->
-    <!-- Start: 2 Rows 1+2 Columns -->
     <div>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <!-- Start: Navigation Clean -->
                     <nav class="navbar navbar-light navbar-expand-md d-flex navigation-clean">
-                        <div class="container-fluid"><img class="img-fluid border rounded-0 d-inline-block flex-shrink-1 mr-auto" data-bs-hover-animate="pulse" src="/assets/img/db-logo-2.jpeg?h=6ac53cfeb9d3569cf93726dfe38df752" width="50" height="50" style="padding: 10;margin: 10;background-color: #fbd000;width: 52px;height: 52px;background-position: left;">
+                        <div class="container-fluid"><img class="img-fluid border rounded-0 d-inline-block flex-shrink-1 mr-auto" data-bs-hover-animate="pulse" src="assets/img/db-logo-2.jpeg" width="50" height="50" style="padding: 10;margin: 10;background-color: #fbd000;width: 52px;height: 52px;background-position: left;">
                             <a
                                 class="navbar-brand" href="#" style="font-family: Orienta, sans-serif;margin: 8px;">Dublin Bus</a><button data-toggle="collapse" class="navbar-toggler text-right" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                                 <div class="collapse navbar-collapse"
@@ -49,11 +48,10 @@
                                 </div>
                         </div>
                     </nav>
-                    <!-- End: Navigation Clean -->
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6" style="opacity: 1;filter: blur(0px) invert(0%);background-position: center;background-size: cover;background-repeat: no-repeat;background-color: #262948;background-image: url(&quot;/assets/img/bus-3.jpeg?h=547329f44679afd055495154c74e0bd2&quot;);">
+                <div class="col-md-6" style="opacity: 1;filter: blur(0px) invert(0%);background-position: center;background-size: cover;background-repeat: no-repeat;background-color: #262948;background-image: url(&quot;assets/img/bus-3.jpeg&quot;);">
                     <div>
                         <h1 class="display-4" style="font-family: Orienta, sans-serif;color: rgb(248,250,251);background-color: #252d5a;">&nbsp;Journey Planner</h1><small class="border rounded-0 border-dark" style="font-family: Orienta, sans-serif;background-color: #fbd000;">&nbsp;Route Number:&nbsp;</small></div><select class="bg-white border rounded-0 d-block"
                         style="font-family: Quattrocento, serif;opacity: 1;" name="Bus Number" value="Bus Number"><optgroup label="Bus Number"><option value="">Route 1</option><option value=""></option></optgroup></select>
@@ -70,17 +68,10 @@
     </div>
     </div>
     </div>
-    <!-- End: 2 Rows 1+2 Columns -->
-    <!-- Start: Map Clean -->
     <div class="map-clean"></div>
-    <!-- End: Map Clean -->
-    <!-- Start: Footer Basic -->
     <div class="footer-basic">
         <footer>
-            <!-- Start: Social Icons -->
             <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-            <!-- End: Social Icons -->
-            <!-- Start: Links -->
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#" style="font-family: Orienta, sans-serif;">Home</a></li>
                 <li class="list-inline-item"><a href="#" style="font-family: Orienta, sans-serif;">Services</a></li>
@@ -88,16 +79,12 @@
                 <li class="list-inline-item"><a href="#" style="font-family: Orienta, sans-serif;">Terms</a></li>
                 <li class="list-inline-item"><a href="#" style="font-family: Orienta, sans-serif;">Privacy Policy</a></li>
             </ul>
-            <!-- End: Links -->
-            <!-- Start: Copyright -->
             <p class="copyright" style="font-family: Orienta, sans-serif;">Company Name © 2017</p>
-            <!-- End: Copyright -->
         </footer>
     </div>
-    <!-- End: Footer Basic -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/script.min.js?h=84a111365b31658389bfd638cc1392eb"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
 </body>
 
 </html>
